# lex-flow

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODE_REVIEW_GUIDE.md  README.md  example_custom_opcodes.py  main.py  pyproject.toml  pytest.ini  requirements.txt  run_competitive_analysis.py  run_competitive_monitor.py  run_tests.py  summary_workflow.json  summary_workflow_function.json  test_competitive_analysis.py  test_competitive_analysis_openrouter.py  test_opcode_introspection.py  validate_tests.py
lexflow-cli/: CHANGELOG.md  pyproject.toml
lexflow-cli/src/lexflow_cli/: __init__.py  docs.py  main.py
lexflow-core/: CHANGELOG.md  CLAUDE.md  pyproject.toml
lexflow-core/src/lexflow/: __init__.py  ast.py  channel.py  engine.py  environment.py  evaluator.py  executor.py  grammar.json  metrics.py  opcodes.py  opcodes_pydantic_ai.py  output.py  parser.py  runtime.py  tasks.py  visualizer.py  workflows.py
lexflow-core/src/lexflow/core/: ast.py  engine.py  errors.py  loader.py  models.py  parser.py  preprocessor.py  state.py
lexflow-core/src/lexflow/grammar/: __init__.py
lexflow-core/src/lexflow/opcodes/: __init__.py  ai.py  control.py  data.py  file.py  io.py  opcodes.py  opcodes_apollo.py  opcodes_chat.py  opcodes_cli.py  opcodes_clicksign.py  opcodes_drive.py  opcodes_gcs.py  opcodes_github.py  opcodes_http.py  opcodes_hubspot.py  opcodes_intercom.py  opcodes_pgvector.py  opcodes_pubsub.py  opcodes_pydantic_ai.py  opcodes_pygame.py  opcodes_rag.py  opcodes_receitaws.py  opcodes_schedule.py  opcodes_sheets.py  opcodes_slack.py  opcodes_tasks.py  opcodes_util.py  opcodes_web_search.py  operators.py  void.py  workflows.py
lexflow-core/src/lexflow/utils/: __init__.py  ai.py
lexflow-web/: CHANGELOG.md  README.md  pyproject.toml
lexflow-web/docs/: CUSTOMIZATION.md  GETTING_STARTED.md  USER_GUIDE.md
lexflow-web/frontend/: .gitignore  ISSUES.md  PROGRESS.md  README.md  REDESIGN_PROPOSAL.md  design_system.md  index.html  package-lock.json  package.json  tsconfig.lib.json  vite.config.ts
lexflow-web/frontend/examples/vanilla-js/: cdn-example.html  index.html  standalone.html
lexflow-web/frontend/src/: App.tsx  config.ts  grammar.json  main.tsx
lexflow-web/frontend/src/api/: client.ts  types.ts
lexflow-web/frontend/src/components/canvas/: index.ts
lexflow-web/frontend/src/components/editor/: CodeEditor.module.css  CodeEditor.tsx
lexflow-web/frontend/src/components/execution/: ExecutionPanel.module.css  ExecutionPanel.tsx  PromptOverlay.module.css  PromptOverlay.tsx  index.ts
lexflow-web/frontend/src/components/icons/: CloseIcon.tsx  CodeIcon.tsx  DownloadIcon.tsx  FileIcon.tsx  FitViewIcon.tsx  GridIcon.tsx  Icon.tsx  MoonIcon.tsx  PlayIcon.tsx  PlusIcon.tsx  RedoIcon.tsx  SaveIcon.tsx  StepForwardIcon.tsx  StopIcon.tsx  SunIcon.tsx  TrashIcon.tsx  UndoIcon.tsx  UploadIcon.tsx  ZoomInIcon.tsx  ZoomOutIcon.tsx  index.ts
lexflow-web/frontend/src/components/layout/: Header.module.css  Header.tsx  MainLayout.module.css  MainLayout.tsx  index.ts
lexflow-web/frontend/src/components/node-editor/: NodeEditorPanel.module.css  NodeEditorPanel.tsx  StartNodeEditorPanel.tsx  index.ts
lexflow-web/frontend/src/components/palette/: DragPreview.module.css  DragPreview.tsx  NodePalette.module.css  NodePalette.tsx  index.ts
lexflow-web/frontend/src/components/ui/: index.ts
lexflow-web/frontend/src/components/visualization/: Canvas.module.css  Canvas.tsx  Connection.module.css  Connection.tsx  InputSlot.tsx  MiniMap.module.css  MiniMap.tsx  NodeSearch.module.css  NodeSearch.tsx  OrphanDragPreview.module.css  OrphanDragPreview.tsx  StartNode.module.css  StartNode.tsx  VariableDragPreview.tsx  WireDragPreview.tsx  WorkflowGroup.module.css  WorkflowGroup.tsx  WorkflowNode.module.css  WorkflowNode.tsx  index.ts
lexflow-web/frontend/src/constants/: index.ts
lexflow-web/frontend/src/hooks/: index.ts  useCanvasInteraction.ts  useCanvasView.ts  useExecution.ts  useKeyboardShortcuts.ts  useNodeOperations.ts  useNodePorts.ts  useSelection.ts  useWebSocket.ts  useWorkflowParsing.ts  useWorkflowState.ts
lexflow-web/frontend/src/lib/: index.ts  theme.ts  types.ts  vanilla.ts
lexflow-web/frontend/src/lib/components/: LexFlowEditor.tsx
lexflow-web/frontend/src/lib/store/: StoreProvider.tsx  createStores.ts  index.ts
lexflow-web/frontend/src/lib/theme/: ThemeProvider.tsx  index.ts  inject.ts  presets.ts
lexflow-web/frontend/src/providers/: ExecutionOverrideContext.tsx  LexFlowProvider.ts  context.tsx  index.ts  types.ts  validation.ts
lexflow-web/frontend/src/services/: index.ts  visualization.ts  yamlParser.ts
lexflow-web/frontend/src/services/command/: CommandService.ts  index.ts  types.ts
lexflow-web/frontend/src/services/grammar/: index.ts
lexflow-web/frontend/src/services/layout/: LayoutService.ts  index.ts
lexflow-web/frontend/src/services/metadata/: MetadataService.ts
lexflow-web/frontend/src/services/workflow/: WorkflowService.ts
lexflow-web/frontend/src/store/: executionStore.ts  index.ts  layoutStore.ts  selectionStore.ts  uiStore.ts  workflowStore.ts
lexflow-web/frontend/src/styles/: index.css  theme.css  variables.css
lexflow-web/frontend/src/types/: grammar.ts
lexflow-web/frontend/src/utils/: typeCompatibility.ts  wireUtils.ts  workflowUtils.ts
lexflow-web/src/lexflow_web/: __init__.py  api.py  app.py  opcodes.py  triggers.py  visualization.py  websocket.py  workflows.py
lexflow-web/src/lexflow_web/static/: app.js  index.html  style.css
lexflow-web/src/lexflow_web/static/assets/: LiteEditor-B7qrZpWE.js  LiteEditor-BFP7QJM_.js  LiteEditor-BgZ3AXP_.js  LiteEditor-BnNgZN8g.js  LiteEditor-CC_5HQ1k.js  LiteEditor-CCltigUu.js  LiteEditor-Di9Sivpc.js  LiteEditor-Dnz8f8Uv.js  LiteEditor-Dr4OGBcN.js  LiteEditor-_qwz72S9.js  LiteEditor-h1ElbRVj.js  LiteEditor-j7XGOS58.js  LiteEditor-u-JXQvTZ.js  index-5mb2uLOV.js  index-B0App6fE.js  index-B0TYn7-Z.css  index-B6fsTf_v.js  index-BAi1Q3u4.js  index-BBwSHu0K.css  index-BHb2WPRV.js  index-BOhCtmVq.css  index-BUVJ68-b.css  index-BamqM5Yd.js  index-BgM6Shwk.css  index-Btt_m2Lv.js  (+34 more)
(+444 files in other folders)
