[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lexflow"
version = "0.2.0"
description = "A stack-based visual programming workflow interpreter"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic",
    "aiofiles",
    "pyyaml",
    "rich",
]

[project.optional-dependencies]
ai = ["pydantic-ai-slim[google]"]
pygame = ["pygame>=2.6.1"]
file = ["pymupdf"]
http = ["aiohttp", "beautifulsoup4"]
rag = ["pypdf", "google-cloud-aiplatform", "qdrant-client"]
web = ["fastapi>=0.100.0", "uvicorn[standard]>=0.23.0"]
dev = ["pytest", "pytest-asyncio"]
all = ["lexflow[ai,pygame,file,http,web,rag]"]

[project.scripts]
lexflow = "lexflow_cli.main:cli_main"
lexflow-web = "lexflow_web.app:run"

[tool.hatch.build.targets.wheel]
packages = ["lexflow-core/src/lexflow", "lexflow-cli/src/lexflow_cli", "lexflow-web/src/lexflow_web"]

[dependency-groups]
dev = [
    "ruff>=0.14.1",
]
