[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lexflow"
version = "0.2.0"
description = "A stack-based visual programming workflow interpreter"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic",
    "aiofiles",
    "pyyaml",
    "rich",
    "lexflow-opcodes>=0.1.0",
]

[project.optional-dependencies]
ai = ["lexflow-opcodes[ai]"]
pygame = ["lexflow-opcodes[pygame]"]
file = ["pymupdf"]
http = ["lexflow-opcodes[http]"]
gcs = ["lexflow-opcodes[gcs]"]
pubsub = ["lexflow-opcodes[pubsub]"]
sheets = ["lexflow-opcodes[sheets]"]
pgvector = ["lexflow-opcodes[pgvector]"]
hubspot = ["lexflow-opcodes[hubspot]"]
slack = ["lexflow-opcodes[slack]"]
rag = ["lexflow-opcodes[rag]"]
search = ["lexflow-opcodes[search]"]
clicksign = ["lexflow-opcodes[clicksign]"]
receitaws = ["lexflow-opcodes[receitaws]"]
github = ["lexflow-opcodes[github]"]
web = ["fastapi>=0.100.0", "uvicorn[standard]>=0.23.0"]
dev = ["pytest", "pytest-asyncio"]
all = ["lexflow-opcodes[all]", "lexflow[file,web]"]

[project.scripts]
lexflow = "lexflow_cli.main:cli_main"
lexflow-web = "lexflow_web.app:run"

[tool.hatch.build.targets.wheel]
packages = ["lexflow-core/src/lexflow", "lexflow-cli/src/lexflow_cli", "lexflow-web/src/lexflow_web"]

[dependency-groups]
dev = [
    "ruff>=0.14.1",
    "pre-commit>=4.0.0",
]
