[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lexflow-cli"
version = "0.1.0"
description = "A stack-based visual programming workflow interpreter - CLI Tool"
requires-python = ">=3.10"
dependencies = [
    "lexflow @ git+https://github.com/inspira-legal/lex-flow.git#subdirectory=lexflow-core",
]

[project.scripts]
lexflow = "lexflow_cli.main:cli_main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/lexflow_cli"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
tag_format = "cli-v{version}"
branch = "main"
commit_message = "chore(cli): release {version}"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "perf", "refactor", "docs", "chore", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
