[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lexflow"
version = "1.4.0"
description = "A stack-based visual programming workflow interpreter - Core Engine"
requires-python = ">=3.10"
dependencies = [
    "pydantic",
    "aiofiles",
    "pyyaml",
    "aiohttp>=3.13.3",
    "beautifulsoup4>=4.14.3",
]

[project.optional-dependencies]
ai = ["pydantic-ai-slim[google]"]
file = ["pymupdf"]
gcs = ["gcloud-aio-storage"]
dev = ["pytest", "pytest-asyncio"]

[tool.hatch.build.targets.wheel]
packages = ["src/lexflow"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
tag_format = "core-v{version}"
branch = "main"
commit_message = "chore(core): release {version}"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "perf", "refactor", "docs", "chore", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
