[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lexflow"
version = "1.15.1"
description = "A stack-based visual programming workflow interpreter - Core engine"
requires-python = ">=3.10"
dependencies = [
    "pydantic",
    "aiofiles",
    "pyyaml",
    "aiohttp>=3.13.3",
    "beautifulsoup4>=4.14.3",
]

[project.optional-dependencies]
ai = ["pydantic-ai-slim[google]>=1.0"]
pygame = ["pygame>=2.6.1"]
file = ["pymupdf"]
clicksign = ["aiohttp"]
hubspot = ["aiohttp"]
receitaws = ["aiohttp"]
slack = ["slack-sdk>=3.19.0,<4.0.0"]
rag = ["pypdf", "google-cloud-aiplatform", "qdrant-client", "bm25s"]
search = ["tavily-python"]
pgvector = ["asyncpg", "pgvector"]
gcs = ["gcloud-aio-storage"]
pubsub = ["gcloud-aio-pubsub"]
sheets = ["google-auth", "google-auth-oauthlib", "google-api-python-client"]
dev = ["pytest", "pytest-asyncio"]
all = ["lexflow[ai,clicksign,pygame,file,hubspot,receitaws,slack,rag,search,pgvector,gcs,pubsub,sheets]"]

[tool.hatch.build.targets.wheel]
packages = ["src/lexflow"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
tag_format = "core-v{version}"
branch = "main"
commit_message = "chore(core): release {version}"

[tool.semantic_release.remote]
type = "github"
ignore_token_for_push = true

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "perf", "refactor", "docs", "chore", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
