[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lexflow"
version = "1.17.0"
description = "A stack-based visual programming workflow interpreter - Core engine"
requires-python = ">=3.10"
dependencies = [
    "pydantic",
    "aiofiles",
    "pyyaml",
    "aiohttp>=3.13.3",
    "beautifulsoup4>=4.14.3",
    "lexflow-opcodes>=0.1.0",
]

[project.optional-dependencies]
ai = ["lexflow-opcodes[ai]"]
pygame = ["lexflow-opcodes[pygame]"]
file = ["pymupdf"]
clicksign = ["lexflow-opcodes[clicksign]"]
hubspot = ["lexflow-opcodes[hubspot]"]
receitaws = ["lexflow-opcodes[receitaws]"]
slack = ["lexflow-opcodes[slack]"]
rag = ["lexflow-opcodes[rag]"]
search = ["lexflow-opcodes[search]"]
pgvector = ["lexflow-opcodes[pgvector]"]
gcs = ["lexflow-opcodes[gcs]"]
pubsub = ["lexflow-opcodes[pubsub]"]
sheets = ["lexflow-opcodes[sheets]"]
github = ["lexflow-opcodes[github]"]
dev = ["pytest", "pytest-asyncio"]
all = ["lexflow-opcodes[all]", "lexflow[file]"]

[tool.hatch.build.targets.wheel]
packages = ["src/lexflow"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
tag_format = "core-v{version}"
branch = "main"
commit_message = "chore(core): release {version}"

[tool.semantic_release.remote]
type = "github"
ignore_token_for_push = true

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "perf", "refactor", "docs", "chore", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
