[project]
name = "lexflow-web"
version = "1.5.1"
description = "Web frontend for LexFlow workflow visualization and execution"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lexflow_web"]

[tool.hatch.build.targets.wheel.shared-data]
"src/lexflow_web/static" = "lexflow_web/static"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
tag_format = "web-v{version}"
branch = "main"
commit_message = "chore(web): release {version}"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "perf", "refactor", "docs", "chore", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
